--- a/style.css
+++ b/style.css
@@ -1,66 +1,7 @@
+@import url("css/navbar.css");
+
+
 *{
     margin: 0;
     padding: 0;
-}
-
-.homepage{
-    width: 100%;
-    height: 100vh;
-    background: rgb(0,0,0);
-    background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(97,49,106,1) 50%, rgba(0,0,0,1) 100%);
-}
-
-.navigation_bar{
-    display: flex;
-    justify-content: space-between;
-    
-}
-
-.nav_logo{
-    font-family: 'Signika Negative', sans-serif;
-    color: white;
-    margin-left: 50px;
-    font-size: 20px;
-    padding-top: 30px;
-}
-
-.nav_con{
-    padding-top: 30px;
-}
-
-.nav_contents{
-    font-family: 'Poppins', sans-serif;
-    margin-left: 50px;
-    font-size: 15px;
-}
-
-.nav_con ul li{
-    display: inline;
-    padding-right: 40px;
-}
-
-.nav_con ul li a{
-    text-decoration: none;
-    color: white;
-}
-
-.hire{
-    margin-top: 28px;
-    margin-right: 50px;
-    list-style: none;
-    width: 82px;
-    height: 35px;
-    background: rgb(89,4,97);
-    border-radius: 20px;
-    background: linear-gradient(90deg, rgba(89,4,97,1) 0%, rgba(117,31,131,1) 20%, rgba(117,0,139,1) 40%, rgba(121,0,144,1) 53%, rgba(137,75,149,1) 70%, rgba(140,65,152,1) 77%, rgba(135,67,148,1) 77%, rgba(164,110,175,1) 83%, rgba(181,124,193,1) 92%, rgba(174,132,185,1) 97%, rgba(177,137,177,1) 100%, rgba(197,140,193,1) 100%);
-}
-
-.hire li a{
-    text-decoration: none;
-    color: white;
-    padding-right: 12px;
-}
-
-.nav_contents{
-    display: flex;
 }
