--- a/css/sections/navbar.css
+++ b/css/sections/navbar.css
@@ -11,12 +11,23 @@
     
 }
 
+.nav_chef{
+    display: flex;
+}
+
+.chef{
+    margin-left: 70px;
+    margin-top: 20px;
+    margin-right: 10px;
+}
+
 .nav_logo{
     font-family: 'Signika Negative', sans-serif;
     color: white;
-    margin-left: 50px;
+    padding-left: 1px;
     font-size: 20px;
-    padding-top: 30px;
+    padding-top: 35px;
+    margin-left: 0px;
 }
 
 .nav_con{
@@ -43,8 +54,10 @@
     margin-top: 28px;
     margin-right: 50px;
     list-style: none;
-    width: 82px;
-    height: 35px;
+    width: 80px;
+    height: 32px;
+    padding-left: 15px;
+    padding-top: 5px;
     background: rgb(89,4,97);
     border-radius: 20px;
     background: linear-gradient(90deg, rgba(89,4,97,1) 0%, rgba(117,31,131,1) 20%, rgba(117,0,139,1) 40%, rgba(121,0,144,1) 53%, rgba(137,75,149,1) 70%, rgba(140,65,152,1) 77%, rgba(135,67,148,1) 77%, rgba(164,110,175,1) 83%, rgba(181,124,193,1) 92%, rgba(174,132,185,1) 97%, rgba(177,137,177,1) 100%, rgba(197,140,193,1) 100%);
