--- a/style.css
+++ b/style.css
@@ -1,6 +1,14 @@
 @import url("css/sections/navbar.css");
+@import url("css/sections/home_left.css");
+@import url("css/sections/home_right.css");
 
 *{
     margin: 0;
     padding: 0;
+}
+
+.second{
+    width: 100%;
+    height: 100vh;
+    background: rgb(0,0,0);
 }
