--- a/css/sections/home_left.css
+++ b/css/sections/home_left.css
@@ -24,6 +24,7 @@
     padding-top: 8px;
     display: flex;
     gap: 10px;
+    font-family: 'Poppins', sans-serif;
     background: rgb(89,4,97);
     border-radius: 20px;
     background: linear-gradient(90deg, rgba(89,4,97,1) 0%, rgba(117,31,131,1) 20%, rgba(117,0,139,1) 40%, rgba(121,0,144,1) 53%, rgba(137,75,149,1) 70%, rgba(140,65,152,1) 77%, rgba(135,67,148,1) 77%, rgba(164,110,175,1) 83%, rgba(181,124,193,1) 92%, rgba(174,132,185,1) 97%, rgba(177,137,177,1) 100%, rgba(197,140,193,1) 100%);
