--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 @import url("css/sections/navbar.css");
 @import url("css/sections/home_left.css");
 @import url("css/sections/home_right.css");
+@import url("css/sections/second_left");
+@import url("css/sections/second_right");
 
 *{
     margin: 0;
@@ -10,5 +12,76 @@
 .second{
     width: 100%;
     height: 100vh;
-    background: rgb(0,0,0);
+    background-color: black;
+    display: flex;
+    gap: 10px;
+}
+
+.chef_again .chef-2{
+    width: 400px;
+    height: 550px;
+    padding-left: 130px;
+    padding-top: 65px;
+    position: absolute;
+}
+
+.salad .salaad{
+    width: 245px;
+    height: 175px;
+    position: relative;
+    left: 400px;
+    top: 120px;
+}
+
+.pizza .pizzaa{
+    width: 255px;
+    height: 200px;
+    position: relative;
+    top: 335px;
+}
+
+.second{
+    display: flex;
+    gap: 600px;
+}
+
+.about_chef{
+    color: white;
+    padding-right: 50px;
+    padding-top: 120px;
+    font-family: 'Poppins', sans-serif;
+}
+
+.chef_def{
+    color: white;
+    font-family: 'Poppins', sans-serif;
+    padding-top: 70px;
+    padding-right: 60px;
+    font-size: 20px;
+}
+
+.know{
+    color: white;
+    font-family: 'Poppins', sans-serif;
+    padding-left: 15px;
+}
+
+.arrow .right-arrow{
+    width: 20px;
+    height: 20px;
+    padding-top: 3px;
+}
+
+.know_more{
+    display: flex;
+    gap: 10px;
+    width: 180px;
+    height: 30px;
+    padding-top: 7px;
+    padding-bottom: 5px;
+    margin-top: 80px;
+    margin-bottom: 120px;
+    background: rgb(89,4,97);
+    border-radius: 20px;
+    background: linear-gradient(90deg, rgba(89,4,97,1) 0%, rgba(117,31,131,1) 20%, rgba(117,0,139,1) 40%, rgba(121,0,144,1) 53%, rgba(137,75,149,1) 70%, rgba(140,65,152,1) 77%, rgba(135,67,148,1) 77%, rgba(164,110,175,1) 83%, rgba(181,124,193,1) 92%, rgba(174,132,185,1) 97%, rgba(177,137,177,1) 100%, rgba(197,140,193,1) 100%);
 }
