--- a/style.css
+++ b/style.css
@@ -25,3 +25,28 @@
   border: 1px solid rgb(0, 0, 0);
   border-radius: 50px;
 }
+
+.footer{
+  background-color: black;
+}
+
+.nav_chef_again{
+  display: flex;
+  justify-content: center;
+  padding-top: 100px;
+}
+
+.chef_again{
+  margin-left: 70px;
+  margin-top: 20px;
+  margin-right: 10px;
+}
+
+.nav_logo_again{
+  font-family: 'Signika Negative', sans-serif;
+  color: white;
+  padding-left: 1px;
+  font-size: 20px;
+  padding-top: 35px;
+  margin-left: 0px;
+}
