--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 @import url("css/sections/third_page.css");
 @import url("css/sections/fourth_page.css");
 @import url("css/sections/review_page.css");
+@import url("css/sections/footer.css");
 
 *{
   margin: 0;
@@ -26,27 +27,3 @@
   border-radius: 50px;
 }
 
-.footer{
-  background-color: black;
-}
-
-.nav_chef_again{
-  display: flex;
-  justify-content: center;
-  padding-top: 100px;
-}
-
-.chef_again{
-  margin-left: 70px;
-  margin-top: 20px;
-  margin-right: 10px;
-}
-
-.nav_logo_again{
-  font-family: 'Signika Negative', sans-serif;
-  color: white;
-  padding-left: 1px;
-  font-size: 20px;
-  padding-top: 35px;
-  margin-left: 0px;
-}
