--- a/css/sections/navbar.css
+++ b/css/sections/navbar.css
@@ -1,6 +1,6 @@
 .homepage{
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background: rgb(0,0,0);
     background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(97,49,106,1) 50%, rgba(0,0,0,1) 100%);
 }
