--- a/css/sections/review_page.css
+++ b/css/sections/review_page.css
@@ -18,7 +18,7 @@
     color: white;
     font-family: 'Poppins', sans-serif;
     padding-left: 60px;
-    padding-top: 30px;
+    padding-top: 50px;
   }
   
   .profiles{
@@ -74,7 +74,7 @@
   
   .total_review{
     display: flex;
-    gap: 2px;
+    /* gap: 2px; */
   }
   
   .girl{
@@ -82,6 +82,8 @@
     height: 360px;
     border-radius: 12px;
     margin-top: 60px;
+    position: relative;
+    top: 400px;
   }
   
   .review_page{
@@ -90,6 +92,9 @@
   
   .review_page_right{
     margin-top: 100px;
+    position: relative;
+    bottom: 400px;
+    right: 50px;
   }
   
   .loreum{
@@ -103,8 +108,8 @@
   border-top-right-radius: 12px;
   border-bottom-right-radius: 12px;
   position: relative;
-  bottom: 212px;
-  left: 210px;
+  top: 188px;
+  left: 200px;
   width: 400px;
   padding: 20px;
   }
