--- a/css/sections/fourth_page.css
+++ b/css/sections/fourth_page.css
@@ -2,6 +2,8 @@
     width: 100%;
     height: 100%;
     background: rgb(0,0,0);
+    padding-top: 50px;
+    padding-bottom: 50px;
 }
   
 .cuisine{
